[project]
name = "ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "medmnist>=3.0.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pydicom>=3.0.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "xgboost>=3.1.2",
]
